static/css/style.css
/* @import url("https://fonts.googleapis.com/css?family=Mozilla_Text:400,700&display=swap");
@import url("https://fonts.googleapis.com/css?family=Zilla+Slab:400,700&display=swap"); */
@import url("https://fonts.googleapis.com/css?family=Mozilla+Text&display=swap");


* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: #fdfdfd;
  font-family: "Mozilla Text", sans-serif;
  font-size: 1rem;
  margin-left: 400px;
  margin-right: 400px;
  text-align: center;
}

main {
  max-width: 900px;
  margin: auto;
  padding: 0.5rem;
  text-align: center;
}

/* navigation bar */
nav {
  display: block;
  justify-content: center;
  align-items: center;
  overflow: visible;
  position: fixed;
  top: 0;
  text-align: center;
  width: 20%;
}

nav img {
  height: 100px;
}

nav ul {
  list-style: none;
  display: flex;
}

nav li {
  margin-right: 1rem;
}

nav ul li a {
  text-decoration-line: none;
  text-transform: uppercase;
  color: #000000;
}

nav ul li a:hover {
  color: #777777;
  text-decoration: underline;
}

nav h1 {
  color: #000000;
  margin-bottom: 0.5rem;
}

/* cards */
.container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;/*(auto-fit, minmax(15rem, 1fr));*/
  grid-template-rows: auto;
  gap: 1rem;
  justify-content: center;
  align-items: center;
  margin: auto;
  padding: 1rem 0;
}

.card {
  display: fixed;
  align-items: center;
  flex-direction: column;
  width: 20rem;
  background: #fff;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
  border-radius: 10px;
  margin: auto;
  overflow: hidden;
}

.card-image {
  width: 100%;
  height: 15rem;
  object-fit: cover;
  text-align: left;
}

.card-name {
  color: #222;
  font-weight: 700;
  text-transform: capitalize;
  font-size: 1.1rem;
  margin-top: 0.5rem;
}

.card-about {
  text-overflow: ellipsis;
  width: 15rem;
  white-space: nowrap;
  overflow: hidden;
  margin-bottom: 1rem;
}

.btn {
  border: none;
  background: none;
  border-radius: 5px;
  box-shadow: 1px 1px 2px rgba(21, 21, 21, 0.1);
  cursor: pointer;
  font-size: 1.25rem;
  margin: 0 1rem;
  padding: 0.25rem 2rem;
  transition: all 0.25s ease-in-out;
  background: hsl(110, 21%, 93%);
  color: hsl(141, 100%, 22%);
  margin-bottom: 1rem;
}

.btn:focus,
.btn:hover {
  box-shadow: 1px 1px 2px rgba(21, 21, 21, 0.2);
  background: hsl(111, 21%, 86%);
}

.about-container {
  font-size: 1.25rem;
  margin-top: 2rem;
  text-align: justify;
  text-justify: inter-word;
}

.logo {
  width: 100%;
  object-fit: cover;
}

/* The sidebar menu */
.sidenav {
  width: 140px; /* Set the width of the sidebar */
  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
  z-index: 1; /* Stay on top */
  top: 20px;
  left: 20px;
  background-color: #eee; /* Black */
  overflow-x: hidden; /* Disable horizontal scroll */
  padding: 8px, 0;
  text-align: left;
}

/* The navigation menu links */
.sidenav a {
  padding: 6px 8px 6px 16px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: #cccccc;
}

/* Style page content */
.main {
  margin-left: 20px; /* Same as the width of the sidebar */
  padding: 0px 10px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

